Работаю над мобильной версией версией

--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
 
         <div class="shops__list">
           <div class="shops__item sima-mag">
-            <a href="/" class="shops__item-title">
+            <div class="shops__item-title">
               Sima-mag.ru
-            </a>
+            </div>
 
             <div class="shops__categories">
               <div class="shops__category shops__category-1" >
@@ -179,15 +179,15 @@
               </div>
             </div>
 
-            <a href="/" class="shops__item-link">
+            <a href="https://www.sima-mag.ru" class="shops__item-link" target="_blank">
               Переход в магазин
             </a>
           </div>
 
           <div class="shops__item gala-mag">
-            <a href="/" class="shops__item-title">
+            <div class="shops__item-title">
               Гала-маг
-            </a>
+            </div>
 
             <div class="shops__categories">
               <div class="shops__category shops__category-1" >
@@ -216,7 +216,7 @@
                 </div>
               </div>
             </div>
-            <a href="/" class="shops__item-link">
+            <a href="https://www.gala-mag.ru" class="shops__item-link" target="_blank">
               Переход в магазин
             </a>
           </div>
@@ -254,7 +254,7 @@
                 </div>
               </div>
             </div>
-            <a href="/" class="shops__item-link">
+            <a href="https://www.nazelenom.ru" class="shops__item-link" target="_blank">
               Переход в магазин
             </a>
           </div>
@@ -271,89 +271,106 @@
       </div>
     </section >
 
-<!--    <section class="contacts" id="contacts">-->
+    <section class="contacts" id="contacts">
 
-<!--      <div class="contacts__container">-->
-<!--        <h2 class="contacts__title">-->
-<!--          География доставок-->
-<!--        </h2>-->
+      <div class="contacts__container">
+        <h2 class="contacts__title">
+          География доставок
+        </h2>
 
-<!--        <div class="contacts__select">-->
-<!--          <div class="contacts__select-title">Выбрать пункт выдачи</div>-->
-<!--          <div class="contacts__select-list">-->
-<!--            <div class="contacts__select-item" data-city="mgn">-->
-<!--              Магнитогорск-->
-<!--            </div>-->
-<!--            <div class="contacts__select-item" data-city="askarovo">-->
-<!--              Аскаровов-->
-<!--            </div>-->
-<!--            <div class="contacts__select-item" data-city="uchaly">-->
-<!--              Учалы-->
-<!--            </div>-->
-<!--            <div class="contacts__select-item" data-city="beloreck">-->
-<!--              Белорецк-->
-<!--            </div>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--        <div class="contacts__map" id="contacts__map">-->
+        <div class="contacts__select">
+          <div class="contacts__select-title">Выбрать пункт выдачи</div>
+          <div class="contacts__select-list">
+            <div class="contacts__select-item" data-city="mgn">
+              Магнитогорск
+            </div>
+            <div class="contacts__select-item" data-city="askarovo">
+              Аскарово
+            </div>
+            <div class="contacts__select-item" data-city="uchaly">
+              Учалы
+            </div>
+            <div class="contacts__select-item" data-city="beloreck">
+              Белорецк
+            </div>
+          </div>
+        </div>
+        <div class="contacts__map" id="contacts__map">
 
-<!--          <div class="contacts__background-kettle"></div>-->
-<!--          <div class="contacts__background-clock"></div>-->
-<!--          <div class="contacts__background-green1 contacts__background-green"></div>-->
-<!--          <div class="contacts__background-green2 contacts__background-green"></div>-->
-<!--          <div class="contacts__background-green3 contacts__background-green"></div>-->
-<!--          <div class="contacts__background-green4 contacts__background-green"></div>-->
-<!--          <div class="contacts__background-green5 contacts__background-green"></div>-->
-<!--          <div class="contacts__background-green6 contacts__background-green"></div>-->
-<!--      </div>-->
-<!--      </div>-->
-<!--    </section>-->
+          <div class="contacts__background-kettle"></div>
+          <div class="contacts__background-clock"></div>
+          <div class="contacts__background-green1 contacts__background-green"></div>
+          <div class="contacts__background-green2 contacts__background-green"></div>
+          <div class="contacts__background-green3 contacts__background-green"></div>
+          <div class="contacts__background-green4 contacts__background-green"></div>
+          <div class="contacts__background-green5 contacts__background-green"></div>
+          <div class="contacts__background-green6 contacts__background-green"></div>
+      </div>
+      </div>
+    </section>
 
-<!--    <section class="partners" id="partners">-->
-<!--      <div class="partners__container">-->
-<!--        <div class="partners__title">Стань партнёром</div>-->
-<!--        <div class="partners__description">-->
-<!--          Открывай пункты выдачи заказов-->
-<!--          и зарабатывай вместе с нами-->
-<!--        </div>-->
+    <section class="partners" id="partners">
+      <div class="partners__container">
+        <div class="partners__title">Стань партнёром</div>
+        <div class="partners__description">
+          Открывай пункты выдачи заказов
+          и зарабатывай вместе с нами
+        </div>
 
-<!--        <div class="partners__info">-->
-<!--          <input type="tel"-->
-<!--                 class="partners__phone"-->
-<!--                 placeholder="Ваш телефон"-->
-<!--                 data-mask="+7 (###) ###-##-##"-->
-<!--                 autocomplete="tel"-->
-<!--          >-->
-<!--          <div class="partners__button">-->
-<!--            Узнать подробнее-->
-<!--          </div>-->
-<!--        </div>-->
+        <div class="partners__info">
+          <input type="tel"
+                 class="partners__phone"
+                 placeholder="Ваш телефон"
+                 data-mask="+7 (###) ###-##-##"
+                 autocomplete="tel"
+          >
+          <div class="partners__button">
+            Узнать подробнее
+          </div>
+        </div>
 
-<!--        <div class="partners__background"></div>-->
-<!--        <div class="partners__background-boxes"></div>-->
-<!--        <div class="partners__background-family"></div>-->
-<!--        <div class="partners__background-logo"></div>-->
-<!--      </div>-->
+        <div class="partners__background"></div>
+        <div class="partners__background-boxes"></div>
+        <div class="partners__background-family"></div>
+        <div class="partners__background-logo"></div>
+      </div>
 
-<!--    </section>-->
+    </section>
   </main>
 
-<!--  <footer class="footer">-->
-<!--    <div class="footer__container">-->
-<!--      <div class="footer__links">-->
-<!--        <a href="/" class="footer__link">Главная</a>-->
-<!--        <a href="/" class="footer__link">Магазины</a>-->
-<!--        <a href="/" class="footer__link">Доставка</a>-->
-<!--        <a href="/" class="footer__link"><span>Бизнес</span> - поставщикам</a>-->
-<!--        <a href="/" class="footer__link"><span>Бизнес</span> ПВЗ</a>-->
-<!--      </div>-->
+  <footer class="footer">
+    <div class="footer__container">
+      <div class="footer__links">
+        <a href="/" class="footer__link">Главная</a>
+        <a href="/" class="footer__link">Магазины</a>
+        <a href="/" class="footer__link">Доставка</a>
+        <a href="/" class="footer__link"><span>Бизнес</span> - поставщикам</a>
+        <a href="/" class="footer__link"><span>Бизнес</span> ПВЗ</a>
+      </div>
 
-<!--      <div class="footer__contacts">-->
-<!--        <a href="tel:+7351933-02-03" class="footer__link">+7 (3519) 33-02-03</a>-->
-<!--        <a href="https://www.vk.com/turbooru" class="footer__link">vk.com/turbooru</a>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </footer>-->
+      <div class="footer__contacts">
+        <a href="tel:+7351933-02-03" class="footer__link">+7 (3519) 33-02-03</a>
+        <a href="https://www.vk.com/turbooru" class="footer__link">vk.com/turbooru</a>
+      </div>
+
+      <div class="footer__bottom">
+        <div class="footer__logo-wrapper">
+          <img src="./dist/images/logo.png" alt="" class="footer__logo">
+          <span class="footer__logo-text">Бизнес</span>
+        </div>
+
+        <div class="footer__bottom-links">
+          <a href="#" class="footer__bottom-link">Поставщикам</a>
+          <a href="#" class="footer__bottom-link">ПВЗ</a>
+        </div>
+
+      </div>
+
+      <div class="footer__sweet"></div>
+      <div class="footer__pillow"></div>
+      <div class="footer__flower"></div>
+    </div>
+  </footer>
 </div>
 <script src="dist/maska.js"></script>
 <script src="dist/script.js"></script>
