--- a/index.html
+++ b/index.html
@@ -152,31 +152,31 @@
             </div>
 
             <div class="shops__categories">
-              <div class="shops__category shops__category-1" >
+              <a href="https://www.sima-mag.ru/catalog/detskie-tovary" class="shops__category shops__category-1" target="_blank">
                 <div class="shops__category-name">
                   Детские товары
                 </div>
-              </div>
-              <div class="shops__category shops__category-2" >
+              </a>
+              <a href="https://www.sima-mag.ru/catalog/prazdniki" class="shops__category shops__category-2" target="_blank">
                 <div class="shops__category-name">
                   <span>Товары</span>  для праздника
                 </div>
-              </div>
-              <div class="shops__category shops__category-3" >
+              </a>
+              <a href="https://www.sima-mag.ru/catalog/posuda" class="shops__category shops__category-3" target="_blank">
                 <div class="shops__category-name">
                   Посуда
                 </div>
-              </div>
-              <div class="shops__category shops__category-4" >
+              </a>
+              <a href="https://www.sima-mag.ru/catalog/tekstil" class="shops__category shops__category-4" target="_blank">
                 <div class="shops__category-name">
                   Текстиль
                 </div>
-              </div>
-              <div class="shops__category shops__category-5" >
+              </a>
+              <a href="https://www.sima-mag.ru/catalog/tvorchestvo" class="shops__category shops__category-5" target="_blank">
                 <div class="shops__category-name">
                   Творчество и хобби
                 </div>
-              </div>
+              </a>
             </div>
 
             <a href="https://www.sima-mag.ru" class="shops__item-link" target="_blank">
@@ -190,31 +190,31 @@
             </div>
 
             <div class="shops__categories">
-              <div class="shops__category shops__category-1" >
+              <a href="https://gala-mag.ru/catalog/240-000/" class="shops__category shops__category-1" target="_blank" >
                 <div class="shops__category-name">
                   Бытовая техника
                 </div>
-              </div>
-              <div class="shops__category shops__category-2" >
+              </a>
+              <a href="https://gala-mag.ru/catalog/800-000/" class="shops__category shops__category-2" target="_blank" >
                 <div class="shops__category-name">
                   Посуда
                 </div>
-              </div>
-              <div class="shops__category shops__category-3" >
+              </a>
+              <a href="https://gala-mag.ru/catalog/640-000/" class="shops__category shops__category-3" target="_blank" >
                 <div class="shops__category-name">
                   Инструменты
                 </div>
-              </div>
-              <div class="shops__category shops__category-4" >
+              </a>
+              <a href="https://gala-mag.ru/catalog/700-000/" class="shops__category shops__category-4" target="_blank" >
                 <div class="shops__category-name">
                   Авто
                 </div>
-              </div>
-              <div class="shops__category shops__category-5" >
+              </a>
+              <a href="https://gala-mag.ru/catalog/330-000/" class="shops__category shops__category-5" target="_blank" >
                 <div class="shops__category-name">
                   Спорт и отдых
                 </div>
-              </div>
+              </a>
             </div>
             <a href="https://www.gala-mag.ru" class="shops__item-link" target="_blank">
               Переход в магазин
@@ -227,32 +227,32 @@
             </div>
 
             <div class="shops__categories">
-              <div class="shops__category shops__category-1" >
+              <a href="https://www.nazelenom.ru/household-chemicals/cleaning-goods/" class="shops__category shops__category-1" target="_blank">
                 <div class="shops__category-name">
                   Бытовая химия
                 </div>
-              </div>
-              <div class="shops__category shops__category-2" >
+              </a>
+              <a href="https://www.nazelenom.ru/beauty-and-health/" class="shops__category shops__category-2" target="_blank" >
                 <div class="shops__category-name">
                   Красота и гигиена
 
                 </div>
-              </div>
-              <div class="shops__category shops__category-3" >
+              </a>
+              <a href="https://www.nazelenom.ru/stationery-and-books/stationery/" class="shops__category shops__category-3" target="_blank" >
                 <div class="shops__category-name">
                   Канцелярские товары
                 </div>
-              </div>
-              <div class="shops__category shops__category-4" >
+              </a>
+              <a href="https://www.nazelenom.ru/garden/" class="shops__category shops__category-4" target="_blank" >
                 <div class="shops__category-name">
                   Сад и огород
                 </div>
-              </div>
-              <div class="shops__category shops__category-5" >
+              </a>
+              <a href="https://www.nazelenom.ru/house-and-garden/cooking-utensils/" class="shops__category shops__category-5" target="_blank">
                 <div class="shops__category-name">
                   Посуда
                 </div>
-              </div>
+              </a>
             </div>
             <a href="https://www.nazelenom.ru" class="shops__item-link" target="_blank">
               Переход в магазин
