--- a/index.html
+++ b/index.html
@@ -327,6 +327,8 @@
           <div class="partners__button">
             Узнать подробнее
           </div>
+
+          <div class="partners__message"></div>
         </div>
 
         <div class="partners__background"></div>
